--- a/src/site/asciidoc/manual/appenders.adoc
+++ b/src/site/asciidoc/manual/appenders.adoc
@@ -4266,9 +4266,10 @@ documents the parameters available for SSL configuration.
 [cols=",,",options="header",]
 |=======================================================================
 |Parameter Name |Type |Description
-|protocol |String |`SSL` if omitted. See also
-http://docs.oracle.com/javase/7/docs/technotes/guides/security/StandardNames.html#SSLContext[Standard
-names].
+|protocol |String |The SSL protocol to use, `TLS` if omitted. A single value
+may enable multiple protocoles, see the
+https://docs.oracle.com/en/java/javase/11/docs/specs/security/standard-names.html#sslcontext-algorithms[JVM
+documentation] for details.
 
 |KeyStore |KeyStore |Contains your private keys and certificates, and
 determines which authentication credentials to send to the remote host.
