--- a/src/site/asciidoc/manual/garbagefree.adoc
+++ b/src/site/asciidoc/manual/garbagefree.adoc
@@ -100,12 +100,13 @@ NOTE: As of version 2.6, a Log4j configuration containing a
 `<Properties>` section will result in temporary objects being created
 during steady-state logging.
 
-NOTE: The Async Logger Timeout wait strategy (the default) and the
-Block wait strategy cause
-`java.util.concurrent.locks.AbstractQueuedSynchronizer$Node` objects to
-be created. The Yield and Sleep wait strategies are garbage-free. (See
+NOTE: The Async Logger Timeout wait strategy (the default) and the Block wait strategy
+are not garbage-free since they
+cause `java.util.concurrent.locks.AbstractQueuedSynchronizer$Node` objects to be created.
+The Yield and Sleep wait strategies are garbage-free. (For configuring predefined wait strategies, see
 link:async.html#SysPropsAllAsync[here] and
-link:async.html#SysPropsMixedSync-Async[here].)
+link:async.html#SysPropsMixedSync-Async[here],
+you may also configure a link:async.html#WaitStrategy[custom wait strategy].)
 
 === Disabling Garbage-free Logging
 
