--- a/src/site/asciidoc/manual/garbagefree.adoc
+++ b/src/site/asciidoc/manual/garbagefree.adoc
@@ -100,9 +100,12 @@ NOTE: As of version 2.6, a Log4j configuration containing a
 `<Properties>` section will result in temporary objects being created
 during steady-state logging.
 
-NOTE: The Async Logger Timeout wait strategy (the default) and the Block wait strategy
+NOTE:  as of version 2.17.3, the default Async Logger wait strategy used by Log4j
+(Timeout) is garbage-free. Some of the wait strategies included in LMAX disruptor 3.4.4,
+especially `TimeoutBlockingWaitStrategy` and `BlockingWaitStrategy` (Block)
 are not garbage-free since they
 cause `java.util.concurrent.locks.AbstractQueuedSynchronizer$Node` objects to be created.
+The default wait strategy used by Log4j uses a synchronized block instead of a ReentrantLock to avoid this problem.
 The Yield and Sleep wait strategies are garbage-free. (For configuring predefined wait strategies, see
 link:async.html#SysPropsAllAsync[here] and
 link:async.html#SysPropsMixedSync-Async[here],
