LOG4J2-3496 - Support injection via container types
- Adds Category qualifier annotation type for injecting plugins from a category
- Adds support for injecting Optional<P>, Collection<P>, Iterable<P>, Set<P>, Stream<P>, List<P>, and Map<String, P>, for a given category
- Moves PluginRegistry into a singleton bean
- Update OSGi activation to work with PluginRegistry

Signed-off-by: Matt Sicker <mattsicker@apache.org>

--- a/src/site/asciidoc/manual/dependencyinjection.adoc
+++ b/src/site/asciidoc/manual/dependencyinjection.adoc
@@ -141,6 +141,7 @@ Some of these bindings were previously configured through various system propert
 
 * `org.apache.logging.log4j.core.ContextDataInjector`
 * `org.apache.logging.log4j.core.config.ConfigurationFactory`
+* `org.apache.logging.log4j.core.config.composite.MergeStrategy`
 * `org.apache.logging.log4j.core.impl.LogEventFactory`
 * `org.apache.logging.log4j.core.lookup.InterpolatorFactory`
 * `org.apache.logging.log4j.core.lookup.StrSubstitutor`
