LOG4J2-3558: make changes based on feedbacks
- changes.xml and documentation is updated
- look-up on priorty has moved from Log4jThreadFactory to Constants
- the priority has adopted in Log4jThread

--- a/src/site/asciidoc/manual/configuration.adoc
+++ b/src/site/asciidoc/manual/configuration.adoc
@@ -2555,4 +2555,9 @@ defining all message patterns using `%m{nolookups}`.
 |false
 |true or false if the host name should be verified
 
+|[[defaultThreadPriority]]log4j2.defaultThreadPriority
+|LOG4J_DEFAULT_THREAD_PRIORITY
+|Thread.NORM_PRIORITY
+|The priority of log4j2 threads, if not overridden in concrete use cases.
+
 |===
