--- a/src/site/asciidoc/manual/extending.adoc
+++ b/src/site/asciidoc/manual/extending.adoc
@@ -371,7 +371,7 @@ pause while the reconfiguration takes place.
 public final class StubAppender extends AbstractOutputStreamAppender<StubManager> {
 
     private StubAppender(String name,
-                         Layout<? extends Serializable> layout,
+                         Layout<?> layout,
                          Filter filter,
                          boolean ignoreExceptions,
                          StubManager  manager) {
@@ -514,7 +514,7 @@ public static ListAppender createAppender(
         @PluginAttribute @Required(message = "No name provided for ListAppender") final String name,
         @PluginAttribute final boolean entryPerNewLine,
         @PluginAttribute final boolean raw,
-        @PluginElement final Layout<? extends Serializable> layout,
+        @PluginElement final Layout<?> layout,
         @PluginElement final Filter filter) {
     return new ListAppender(name, filter, layout, newLine, raw);
 }
@@ -534,7 +534,7 @@ public static class Builder implements org.apache.logging.log4j.plugins.util.Bui
     private String name;
     private boolean entryPerNewLine;
     private boolean raw;
-    private Layout<? extends Serializable> layout;
+    private Layout<?> layout;
     private Filter filter;
 
 
@@ -556,7 +556,7 @@ public static class Builder implements org.apache.logging.log4j.plugins.util.Bui
         return this;
     }
 
-    public Builder setLayout(@PluginElement final Layout<? extends Serializable> layout) {
+    public Builder setLayout(@PluginElement final Layout<?> layout) {
         this.layout = layout;
         return this;
     }
