LOG4J2-2785 - Pattern Layout to abbreviate the name of all logger components except the rightmost words

--- a/src/site/asciidoc/manual/layouts.adoc
+++ b/src/site/asciidoc/manual/layouts.adoc
@@ -808,7 +808,10 @@ When the precision specifier is an integer value, it reduces the size of
 the logger name. If the number is positive, the layout prints the
 corresponding number of rightmost logger name components. If negative,
 the layout removes the corresponding number of leftmost logger name
-components.
+components. If the precision contains periods then the number before the first period
+identifies the length to be printed from items that precede tokens in the rest of the pattern.
+If the number after the first period is followed by an asterisk it indicates how many of the
+rightmost tokens will be printed in full. See the table below for abbreviation examples.
 
 If the precision contains any non-integer characters, then the layout
 abbreviates the name based on the pattern. If the precision integer is
@@ -846,13 +849,30 @@ default, the layout prints the logger name in full.
 !org.apache.commons.Foo
 !o.a.c.Foo
 
-!%c{1.1.~.~}
+!%c{1.1.\~.~}
 !org.apache.commons.test.Foo
 !o.a.~.~.Foo
 
 !%c{.}
 !org.apache.commons.test.Foo
 !....Foo
+
+!%c{1.1.1.*}
+!org.apache.commons.test.Foo
+!o.a.c.test.Foo
+
+!%c{1.2.*}
+!org.apache.commons.test.Foo
+!o.a.c.test.Foo
+
+!%c{1.3.*}
+!org.apache.commons.test.Foo
+!o.a.commons.test.Foo
+
+!%c{1.8.*}
+!org.apache.commons.test.Foo
+!org.apache.commons.test.Foo
+
 !===
 
 |[[PatternClass]] *C*{precision} +
