--- a/src/site/antora/modules/ROOT/pages/manual/appenders/delegating.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/appenders/delegating.adoc
@@ -265,31 +265,10 @@ The `SpinPolicy` to apply, when adding elements to the queue.
 .Additional dependencies are required to use `DisruptorBlockingQueue`
 [%collapsible]
 =====
-[tabs]
-====
-Maven::
-+
-[source,xml,subs="+attributes"]
-----
-<dependency>
-  <groupId>com.conversantmedia</groupId>
-  <artifactId>disruptor</artifactId>
-  <version>{conversant-version}</version>
-  <scope>runtime</scope>
-</dependency>
-----
-
-Gradle::
-+
-[source,groovy,subs="+attributes"]
-----
-runtimeOnly 'com.conversantmedia:disruptor:{conversant-version}'
-----
-
-====
+include::partial$features/queue-conversant.adoc[]
 =====
 +
-xref:plugin-reference.adoc#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-async-DisruptorBlockingQueueFactory[{plugin-reference-marker} Plugin reference for `DisruptorBlockingQueue`]
+xref:plugin-reference.adoc#org-apache-logging-log4j_log4j-conversant_org-apache-logging-log4j-conversant-DisruptorBlockingQueueFactory[{plugin-reference-marker} Plugin reference for `DisruptorBlockingQueue`]
 
 [#JCToolsBlockingQueueFactory]
 `JCToolsBlockingQueue`::
